--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#fb898e">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>React App</title>
   </head>
@@ -12,6 +13,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <h1 class="title">MyHours</h1>
     <div id="root"></div>
   </body>
 </html>
