--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,6 +14,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <h1 class="title">MyHours</h1>
+    <p class="subtitle">The hours that you've worked so far:</p>
     <div id="root"></div>
   </body>
 </html>
