--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,7 +14,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <h1 class="title">MyHours</h1>
-    <p class="subtitle">Fill in your working hours:</p>
+    <p class="subtitle">When and where did you work?</p>
     <div id="root"></div>
   </body>
 </html>
