--- a/app/public/index.html
+++ b/app/public/index.html
@@ -19,4 +19,20 @@
   <div id="root"></div>
 </body>
 
+<script>
+  WebFontConfig = {
+    google: {
+      families: ['Montserrat: 400, 700', 'Open Sans: 400, 800']
+    }
+  };
+
+  (function (d) {
+    var wf = d.createElement('script'),
+      s = d.scripts[0];
+    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js';
+    wf.async = true;
+    s.parentNode.insertBefore(wf, s);
+  })(document);
+</script>
+
 </html>
